--- a/Scarb.toml
+++ b/Scarb.toml
@@ -8,6 +8,7 @@ sierra-replace-ids = true
 
 [dependencies]
 dojo = { git = "https://github.com/dojoengine/dojo", version = "0.4.4" }
+rocket = "0.4.10"
 
 [[target.dojo]]
 
