--- a/Scarb.toml
+++ b/Scarb.toml
@@ -7,7 +7,7 @@ version = "0.4.4"
 sierra-replace-ids = true
 
 [dependencies]
-dojo = { git = "https://github.com/oayras/dojo", version = "0.4.4" }
+dojo = { git = "https://github.com/dojoengine/dojo", version = "0.4.4" }
 rocket = "0.4.10"
 
 [[target.dojo]]
